--- a/anywhere/templates/menu.html
+++ b/anywhere/templates/menu.html
@@ -60,7 +60,7 @@
                                             <br/>
                                             <a href="https://www.youtube.com/video" class="card-link">Acceder al video en 'Youtube'</a>
                                             <br/>
-                                            <a href="/docs/README.html" class="card-link">Acceso al "Readme" del Proyecto</a>
+                                            <a href="static/docs/readme.html" class="card-link">Acceso al "Readme" del Proyecto</a>
                                             <br/>
                                             <a href="https://jcordovaj.pythonanywhere.com/" class="card-link">Ver el proyecto montado en WEB</a>
                                             <br/>
