--- a/anywhere/templates/menu.html
+++ b/anywhere/templates/menu.html
@@ -58,7 +58,7 @@
                                             <br/>
                                             <a href="https://www.github.com/jcordovaj/EvalM3" class="card-link">Acceder al repo en Github</a>
                                             <br/>
-                                            <a href="https://www.youtube.com/video" class="card-link">Acceder al video en 'Youtube'</a>
+                                            <a href="https://youtu.be/jOBv1hvCZAE" class="card-link">Acceder al video en 'Youtube'</a>
                                             <br/>
                                             <a href="static/docs/readme.html" class="card-link">Acceso al "Readme" del Proyecto</a>
                                             <br/>
